fixed cache handling added more vfs tests litmus test (basic, copymove works fully) updated libraries using maven2

--- a/src/main/resources/moxo.template.properties
+++ b/src/main/resources/moxo.template.properties
@@ -35,4 +35,5 @@ acl=PRIVATE
 password=<some encryption password here>
 
 # the bucket that contains the file system
-bucket=<the file system bucket>
+s3.url=s3://TESTBUCKET/
+#s3.url=ram:/
