--- a/src/main/resources/simplelog.properties
+++ b/src/main/resources/simplelog.properties
@@ -14,4 +14,5 @@
 # limitations under the License.
 #
 
-org.apache.commons.logging.simplelog.defaultlog=info
+org.apache.commons.logging.simplelog.defaultlog=error
+org.apache.commons.logging.simplelog.log.com.thinkberg.moxo=debug
