--- a/pom.xml
+++ b/pom.xml
@@ -3,43 +3,20 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.thinkberg.moxo</groupId>
     <artifactId>moxo</artifactId>
-    <packaging>jar</packaging>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>modules/webdav</module>
+        <module>modules/vfs.s3</module>
+    </modules>
     <name>Moxo S3 DAV Proxy</name>
     <url>http://thinkberg.com</url>
-    <repositories>
-        <repository>
-            <id>codehaus-m2-repository</id>
-            <name>Codehaus Maven 2.x Repository</name>
-            <url>http://repository.codehaus.org</url>
-        </repository>
-        <repository>
-            <name>jets3t</name>
-            <id>jets3t</id>
-            <url>http://jets3t.s3.amazonaws.com/maven2</url>
-        </repository>
-    </repositories>
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>3.8.1</version>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>net.java.dev.jets3t</groupId>
-            <artifactId>jets3t</artifactId>
-            <version>0.6.1</version>
-        </dependency>
-        <dependency>
-            <groupId>commons-httpclient</groupId>
-            <artifactId>commons-httpclient</artifactId>
-            <version>3.0.1</version>
-        </dependency>
-        <dependency>
-            <groupId>commons-vfs</groupId>
-            <artifactId>commons-vfs</artifactId>
-            <version>1.0</version>
         </dependency>
         <dependency>
             <groupId>org.mortbay.jetty</groupId>
@@ -122,7 +99,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>com.thinkberg.moxo.MoxoJettyRunner</mainClass>
+                            <mainClass>com.thinkberg.moxo.Main</mainClass>
                             <addClasspath>true</addClasspath>
                         </manifest>
                     </archive>
