--- a/modules/webdav/pom.xml
+++ b/modules/webdav/pom.xml
@@ -33,6 +33,22 @@
             <artifactId>commons-vfs</artifactId>
             <version>1.0</version>
         </dependency>
+        <dependency>
+            <groupId>commons-httpclient</groupId>
+            <artifactId>commons-httpclient</artifactId>
+            <version>3.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-collections</groupId>
+            <artifactId>commons-collections</artifactId>
+            <version>3.2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.3</version>
+        </dependency>
+
     </dependencies>
     <build>
         <resources>
