--- a/src/main/resources/simplelog.properties
+++ b/src/main/resources/simplelog.properties
@@ -15,4 +15,5 @@
 #
 
 org.apache.commons.logging.simplelog.defaultlog=error
-org.apache.commons.logging.simplelog.log.com.thinkberg.moxo=debug
+org.apache.commons.logging.simplelog.log.com.thinkberg.vfs.s3=debug
+org.apache.commons.logging.simplelog.log.com.thinkberg.webdav=debug
