--- a/pom.xml
+++ b/pom.xml
@@ -9,107 +9,7 @@
     <modules>
         <module>modules/webdav</module>
         <module>modules/vfs.s3</module>
+        <module>modules/server</module>
     </modules>
     <url>http://thinkberg.com</url>
-    <dependencies>
-        <dependency>
-            <groupId>org.mortbay.jetty</groupId>
-            <artifactId>jetty</artifactId>
-            <version>6.1.1</version>
-        </dependency>
-        <dependency>
-            <groupId>com.thinkberg</groupId>
-            <artifactId>webdav</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>com.thinkberg</groupId>
-            <artifactId>vfs.s3</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-    </dependencies>
-    <build>
-        <resources>
-            <resource>
-                <directory>src/main/resources</directory>
-            </resource>
-        </resources>
-        <plugins>
-            <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <verbose>true</verbose>
-                    <fork>true</fork>
-                    <source>1.5</source>
-                    <target>1.5</target>
-                </configuration>
-            </plugin>
-
-            <!--
-              mvn test
-              Documentation: http://maven.apache.org/plugins/maven-surefire-plugin/
-            -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <includes>
-                        <include>**/MoxoTest.java</include>
-                    </includes>
-                </configuration>
-            </plugin>
-
-            <!--
-               jar
-               mvn package
-               Documentation: http://maven.apache.org/plugins/maven-jar-plugin/
-             -->
-            <!--<plugin>-->
-            <!--<groupId>org.apache.maven.plugins</groupId>-->
-            <!--<artifactId>maven-jar-plugin</artifactId>-->
-            <!--<executions>-->
-            <!--<execution>-->
-            <!--<phase>package</phase>-->
-            <!--<goals>-->
-            <!--<goal>jar</goal>-->
-            <!--</goals>-->
-            <!--<configuration>-->
-            <!--<classifier>client</classifier>-->
-            <!--<includes>-->
-            <!--<include>**/client/*</include>-->
-            <!--<include>**/servlet/*</include>-->
-            <!--<include>barcode-client.properties</include>-->
-            <!--<include>log4j.properties</include>-->
-            <!--<include>images/*</include>-->
-            <!--<include>templates/*</include>-->
-            <!--</includes>-->
-            <!--</configuration>-->
-            <!--</execution>-->
-            <!--</executions>-->
-            <!--</plugin>-->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                        <configuration>
-                            <archive>
-                                <manifest>
-                                    <mainClass>com.thinkberg.moxo.Main</mainClass>
-                                    <addClasspath>true</addClasspath>
-                                </manifest>
-                            </archive>
-                            <includes>
-                                <include>**/moxo/*</include>
-                            </includes>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
 </project>
