--- a/modules/server/src/main/resources/simplelog.properties
+++ b/modules/server/src/main/resources/simplelog.properties
@@ -15,5 +15,6 @@
 #
 
 org.apache.commons.logging.simplelog.defaultlog=error
+org.apache.commons.logging.simplelog.org.mortbay=info
 org.apache.commons.logging.simplelog.log.com.thinkberg.vfs.s3=info
 org.apache.commons.logging.simplelog.log.com.thinkberg.webdav=info
