--- a/pom.xml
+++ b/pom.xml
@@ -1,15 +1,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <groupId>com.thinkberg</groupId>
-    <artifactId>moxo</artifactId>
-    <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
-    <name>Moxo S3 DAV Proxy</name>
-    <modules>
-        <module>modules/server</module>
-        <module>modules/webdav</module>
-        <module>modules/vfs.s3</module>
-    </modules>
-    <url>http://thinkberg.com</url>
+  <modelVersion>4.0.0</modelVersion>
+  <groupId>com.thinkberg</groupId>
+  <artifactId>moxo</artifactId>
+  <packaging>pom</packaging>
+  <version>1.0-SNAPSHOT</version>
+  <name>thinkberg.com Moxo S3 DAV Project</name>
+  <modules>
+    <module>modules/server</module>
+    <module>modules/webdav</module>
+    <module>modules/vfs.s3</module>
+  </modules>
+  <url>http://thinkberg.com</url>
 </project>
